@@ -11,8 +11,9 @@
 """
 
 import warnings
-from collections import OrderedDict, defaultdict
-from typing import Any, Callable, Dict, List
+from collections import defaultdict
+from operator import attrgetter
+from typing import Any, Callable, Dict, List, NamedTuple
 
 from sphinx.deprecation import RemovedInSphinx40Warning
 from sphinx.errors import ExtensionError
@@ -25,6 +26,10 @@ if False:
 
 
 logger = logging.getLogger(__name__)
+
+EventListener = NamedTuple('EventListener', [('id', int),
+                                             ('handler', Callable),
+                                             ('priority', int)])
 
 
 # List of all known core events. Maps name to arguments description.
@@ -57,7 +62,7 @@ class EventManager:
                           RemovedInSphinx40Warning)
         self.app = app
         self.events = core_events.copy()
-        self.listeners = defaultdict(OrderedDict)  # type: Dict[str, Dict[int, Callable]]
+        self.listeners = defaultdict(list)  # type: Dict[str, List[EventListener]]
         self.next_listener_id = 0
 
     def add(self, name: str) -> None:
@@ -66,20 +71,22 @@ class EventManager:
             raise ExtensionError(__('Event %r already present') % name)
         self.events[name] = ''
 
-    def connect(self, name: str, callback: Callable) -> int:
+    def connect(self, name: str, callback: Callable, priority: int) -> int:
         """Connect a handler to specific event."""
         if name not in self.events:
             raise ExtensionError(__('Unknown event name: %s') % name)
 
         listener_id = self.next_listener_id
         self.next_listener_id += 1
-        self.listeners[name][listener_id] = callback
+        self.listeners[name].append(EventListener(listener_id, callback, priority))
         return listener_id
 
     def disconnect(self, listener_id: int) -> None:
         """Disconnect a handler."""
-        for event in self.listeners.values():
-            event.pop(listener_id, None)
+        for listeners in self.listeners.values():
+            for listener in listeners[:]:
+                if listener.id == listener_id:
+                    listeners.remove(listener)
 
     def emit(self, name: str, *args: Any) -> List:
         """Emit a Sphinx event."""
@@ -91,12 +98,13 @@ class EventManager:
             pass
 
         results = []
-        for callback in self.listeners[name].values():
+        listeners = sorted(self.listeners[name], key=attrgetter("priority"))
+        for listener in listeners:
             if self.app is None:
                 # for compatibility; RemovedInSphinx40Warning
-                results.append(callback(*args))
+                results.append(listener.handler(*args))
             else:
-                results.append(callback(self.app, *args))
+                results.append(listener.handler(self.app, *args))
         return results
 
     def emit_firstresult(self, name: str, *args: Any) -> Any:
